# lib_tcstring

./: CHANGELOG.md  Cargo.toml  README.md  criterion.toml  deny.toml  rust-toolchain.toml  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
benches/: tc_v1_string.rs  tc_v2_string.rs
src/: lib.rs  macros.rs
src/decode/: error.rs  mod.rs  model.rs  tcf_1.rs  tcf_2.rs  util.rs
