[package]
name = "lib_tcstring"
version = "0.2.0"
authors = ["Joerg Jennerjahn <joerg.jennerjahn@advanced-store.com>", "Friedemann Sommer <friedemann.sommer@advanced-store.com>"]
edition = "2018"
description = "IAB TCF (v1, v2) TCString utilities"
homepage = "https://github.com/advancedSTORE/lib_tcstring"
repository = "https://github.com/advancedSTORE/lib_tcstring"
license = "Apache-2.0"
keywords = ["tcf", "tcstring", "string", "decode"]
categories = ["parsing"]
exclude = [".github/**", "Cargo.lock"]
documentation = "https://docs.rs/lib_tcstring/"
readme = "README.md"

[features]
default = []

[dev-dependencies]
clippy = "*"
criterion = "0.3"
version-sync = "0.9"

[dependencies]
base64 = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }

[badges]
is-it-maintained-issue-resolution = { repository = "advancedSTORE/lib_tcstring" }
is-it-maintained-open-issues = { repository = "advancedSTORE/lib_tcstring" }
maintenance = { status = "passively-maintained" }

[[bench]]
name = "tc_v1_string"
harness = false

[[bench]]
name = "tc_v2_string"
harness = false
