[package]
name = "lib_tcstring"
version = "0.4.1"
authors = ["Joerg Jennerjahn <joerg.jennerjahn@advanced-store.com>", "Friedemann Sommer <friedemann.sommer@advanced-store.com>"]
edition = "2018"
description = "IAB TCF v2 TCString utilities"
homepage = "https://github.com/advancedSTORE/lib_tcstring"
repository = "https://github.com/advancedSTORE/lib_tcstring"
license = "Apache-2.0"
keywords = ["tcf", "tcstring", "string", "decode"]
categories = ["parsing"]
exclude = [".github/**", "Cargo.lock"]
documentation = "https://docs.rs/lib_tcstring/"
readme = "README.md"

[features]
default = []

[dev-dependencies]
criterion = "0.5.0"
version-sync = "0.9.4"

[dependencies]
base64 = "0.21"
serde = { version = "1.0", features = ["derive"], optional = true }

[badges]
maintenance = { status = "passively-maintained" }

[profile.bench]
lto = true

[[bench]]
name = "tc_v2_string"
harness = false
